src/objects/Lcm_TestPhase__c.object
<CustomObject>
    <description>Testphase, in der ausgewählte Testfälle ausgeführt werden.</description>
    <fields>
        <fullName>Lcm_Ende__c</fullName>
        <description>Ende der Testphase</description>
        <inlineHelpText>Ende der Testphase</inlineHelpText>
        <label>Ende</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_Start__c</fullName>
        <description>Start der Testphase</description>
        <inlineHelpText>Start der Testphase</inlineHelpText>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestphaseName__c</fullName>
        <description>Name der Testphase</description>
        <inlineHelpText>Name der Testphase</inlineHelpText>
        <label>Testphasen-Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_VersionName__c</fullName>
        <formula>Lcm_Version__r.Lcm_VersionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versions-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Version, die in der Testphase getestet wird.</description>
        <inlineHelpText>Version, die in der Testphase getestet wird.</inlineHelpText>
        <label>Versions-Nr</label>
        <referenceTo>Lcm_Version__c</referenceTo>
        <relationshipLabel>Testphasen</relationshipLabel>
        <relationshipName>Testphasen</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Testphase</label>
    <listViews>
        <fullName>ADcalibur</fullName>
        <columns>NAME</columns>
        <columns>Lcm_TestphaseName__c</columns>
        <columns>Lcm_Start__c</columns>
        <columns>Lcm_Ende__c</columns>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_VersionName__c</field>
            <operation>startsWith</operation>
            <value>NBT</value>
        </filters>
        <label>ADcalibur</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lcm_TestphaseName__c</columns>
        <columns>Lcm_Start__c</columns>
        <columns>Lcm_Ende__c</columns>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>offen</fullName>
        <columns>NAME</columns>
        <columns>Lcm_TestphaseName__c</columns>
        <columns>Lcm_Start__c</columns>
        <columns>Lcm_Ende__c</columns>
        <columns>Lcm_Version__c</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Ende__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>offen</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Testphase-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testphasen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>